--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/prosemirror-history": "^1.0.3",
+    "@types/prosemirror-keymap": "^1.0.4",
+    "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "prosemirror-commands": "^1.1.10",
+    "prosemirror-history": "^1.1.3",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-model": "^1.14.3",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-view": "^1.18.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-prosemirror": "^1.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
