--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "prosemirror-commands": "^1.1.10",
-    "prosemirror-history": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.14.3",
     "prosemirror-schema-basic": "^1.1.2",
@@ -25,7 +24,10 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "use-prosemirror": "^1.2.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "y-prosemirror": "^1.0.9",
+    "y-websocket": "^1.3.16",
+    "yjs": "^13.5.11"
   },
   "scripts": {
     "start": "react-scripts start",
